Implementacao da tela Loading com JS

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
         <title>Food</title>
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="./img/burger.png" type="image/x-icon">
+        
     </head>
-    <body>
+    <body class="page">
+
+        <div id="carregar"></div>
+
         <header>
             <h1>Tuba<span>Food</span></h1>
             <p>Aberto todos os dias. 18h-23h</p>
@@ -102,5 +106,14 @@
                 </li>
             </ul>
         </section>
+
+
+        <!-- iframes apenas para dar ajudar o loading -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/5z_SPHwspo8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/5z_SPHwspo8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        
+        <script src="/script.js"></script>
     </body>
 </html>
