--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </section>
 
 
-        <!-- iframes apenas para dar ajudar o loading -->
+        <!-- iframes apenas para ajudar o loading -->
         <iframe width="0" height="315" src="https://www.youtube.com/embed/5z_SPHwspo8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <iframe width="0" height="315" src="https://www.youtube.com/embed/5z_SPHwspo8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
