adicionado logo whatsapp

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <h1>Tuba<span>Food</span></h1>
             <p>Aberto todos os dias. 18h-23h</p>
-            <a href="#" target="_blank">Nosso WhatsApp</a>
+            <a href="#" target="_blank">Nosso WhatsApp <img src="/img/whatsapp (1).png" alt="whatsapp"> </a>
         </header>
 
         <section>
